@@ -1,4 +1,4 @@
-; This file was auto-generated from iller.yaml by Dist::Iller on 2016-09-05 09:07:02 UTC.
+; This file was auto-generated from iller.yaml by Dist::Iller on 2016-09-12 11:44:41 UTC.
 ; The following configs were used:
 ; * Dist::Iller::Config::Author::CSSON: 0.0312
 
@@ -241,9 +241,18 @@ Dist::Iller::Config::Author::CSSON = 0.0312
 [Prereqs / RuntimeRequires]
 DateTime::Tiny = 1.06
 GraphViz2 = 2.38
+JSON::MaybeXS = 1.003003
 List::Util = 1.45
+Log::Handler = 0.84
 Moo = 2.00
+PerlX::Maybe = 1.001
+ReadonlyX = 1.03
+Syntax::Keyword::Gather = 1.002000
+Types::Standard = 1.000005
 perl = 5.010001
+
+[Prereqs / RuntimeRecommends]
+Mojolicious = 6.0
 
 [Prereqs / TestRequires]
 Test::More = 0.96
